# pbr

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  cfg.py  config.py  extensions.py  lower-constraints.txt  manager.py  pyproject.toml  pyproject.toml.future  requirements.txt  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  tox.ini  utils.py
db/: common.py
doc/: requirements.txt
doc/source/: compatibility.rst  conf.py  index.rst  packagers.rst  semver.rst
doc/source/contributor/: index.rst
doc/source/reference/: index.rst
doc/source/user/: features.rst  index.rst  packagers.rst  releasenotes.rst  semver.rst  using.rst
notifier/: list_notifier.py
oslo/: __init__.py
oslo/packaging/: core.py  hooks.py  packaging.py  util.py
oslo/packaging/tests/: test_setup.py  utils.py
pbr/: __init__.py  build.py  builddoc.py  cmdclass.py  core.py  extra_files.py  find_package.py  git.py  hooks.py  options.py  packaging.py  pbr_json.py  requires.py  setup.py  setupcfg.py  sphinxext.py  tag_command.py  testr_command.py  util.py  version.py
pbr/_compat/: command_hooks.py  commands.py  easy_install.py  five.py  metadata.py  packaging.py  versions.py
pbr/cmd/: main.py
pbr/d2to1/: core.py  util.py  zestreleaser.py
pbr/d2to1/tests/: __init__.py  test_commands.py  test_core.py  test_hooks.py  util.py
pbr/d2to1/tests/testpackage/: README.txt  setup.cfg  setup.py
pbr/d2to1/tests/testpackage/d2to1_testpackage/: _setup_hooks.py
pbr/hooks/: __init__.py  backwards.py  base.py  commands.py  files.py  metadata.py
pbr/tests/: __init__.py  base.py  fixtures.py  test_commands.py  test_core.py  test_files.py  test_git.py  test_hooks.py  test_integration.py  test_packaging.py  test_pbr_json.py  test_requires.py  test_setup.py  test_setupcfg.py  test_util.py  test_version.py  test_wsgi.py  util.py  utils.py
pbr/tests/_compat/: test_commands.py  test_easy_install.py
pbr/tests/functional/: base.py  test_c_extension.py  test_changelog_author.py  test_commands.py  test_console_scripts.py  test_extra_files.py  test_hooks.py  test_integration.py  test_pbr_json.py  test_pep517.py  test_requirements.py  test_wsgi_scripts.py
pbr/tests/testpackage/: setup.cfg  setup.py
pbr/tests/testpackage/doc/source/: conf.py
pbr/tests/testpackage/pbr_testpackage/: cmd.py  wsgi.py
playbooks/legacy/pbr-installation-devstack/: run.yaml
playbooks/legacy/pbr-installation-upstream-devstack/: run.yaml
playbooks/pbr-installation-openstack/: pre.yaml  run.yaml
releasenotes/notes/: bdist_wininst-removal-4a1c7c3a9f08238d.yaml  build_sphinx_removal-de990a5c14a9e64d.yaml  cmd-e6664dcbd42d3935.yaml  fix-global-replace-of-src-prefix-in-glob-eb850b94ca96993e.yaml  fix-handling-of-spaces-in-data-files-glob-0fe0c398d70dfea8.yaml  fix-keywords-as-cfg-list-6cadc5141429d7f5.yaml  fix-mapping-value-explode-with-equal-sign-41bf822fa4dd0e68.yaml  fix-pep517-metadata-regression-bc287e60e45b2732.yaml  fix-symbols-leading-spaces-f68928d75a8f0997.yaml  global-compilers-removal-62b131e40de087ef.yaml  ignore-find-links-07cf54f465aa33a6.yaml  long-descr-content-type-f9a1003acbb8740f.yaml  pep517-support-89189ce0bab15845.yaml  setuptools-alignment-b5b1309f47e9cf98.yaml  support-vcs-uris-with-subdirectories-20ad68b6138f72ca.yaml  test-command-removal-153fc9ecdd6834ef.yaml  use_2to3-removal-ac48bf9fbfa049b1.yaml
releasenotes/source/: conf.py
tools/: integration.sh  test-requires
