[metadata]
name = pbr
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Python Build Reasonableness
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/pbr
requires-python = >=2.6
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    pbr

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
warnerrors = True

[entry_points]
distutils.setup_keywords =
    pbr = pbr.core:pbr

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
