[metadata]
name = d2to1_testpackage
version = 0.1.dev
author = Erik M. Bray
author-email = embray@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = Test package for testing d2to1
description-file =
    README.txt
    CHANGES.txt
requires-python = >=2.5

requires-dist =
    setuptools

classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

keywords = packaging, distutils, setuptools

[files]
packages = d2to1_testpackage
package_data = testpackage = package_data/*.txt
data_files = testpackage/data_files = data_files/*.txt

[extension=d2to1_testpackage.testext]
sources = src/testext.c
optional = True

[global]
#setup-hooks =
#    d2to1_testpackage._setup_hooks.test_hook_1
#    d2to1_testpackage._setup_hooks.test_hook_2
commands = d2to1_testpackage._setup_hooks.test_command

[build_ext]
#pre-hook.test_pre_hook = d2to1_testpackage._setup_hooks.test_pre_hook
#post-hook.test_post_hook = d2to1_testpackage._setup_hooks.test_post_hook
